--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,18 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+@media screen and (max-width: 560px) {
+
+	iframe {
+		min-width: 400px;
+		min-height: 225px;
+		max-height: 225px;
+
+	}
+
+}
+
+
 /* Icon (alt) */
 
 	html, body, div, span, applet, object,
@@ -2036,7 +2048,7 @@
 
 						.header nav ul li a{
 							font-size: 1em;
-							min-width: 6.8em; /* Change button width here (Navigation bar) */
+							min-width: 6.0em; /* Change mobile button width here (Navigation bar) */
 						}
 			
 					}
