--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,17 +7,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-@media screen and (max-width: 560px) {
-
-	iframe {
-		min-width: 400px;
-		min-height: 225px;
-		max-height: 225px;
-
-	}
-
-}
-
 
 /* Icon (alt) */
 
@@ -2044,14 +2033,8 @@
 					.header nav ul li a:active {
 						background-color: rgba(0, 0, 0, 0.75);
 					}
-					@media screen and (max-width: 980px) {
 
-						.header nav ul li a{
-							font-size: 1em;
-							min-width: 6.0em; /* Change mobile button width here (Navigation bar) */
-						}
-			
-					}
+
 		.subheader nav ul {
 			display: -moz-flex;
 			display: -webkit-flex;
@@ -2094,23 +2077,65 @@
                     border:  0em #c8cccf;
                     border-radius: 0.0em;                    
 				}
+
+
 				@media screen and (max-width: 980px) {
+
+					.header nav ul li a{
+						font-size: 1.1em;
+						min-width: 6.5em; /* Change mobile button width here (Navigation bar) */
+					}
 
 					.subheader nav ul li a{
 						font-size: 1.01em;
 						min-height: 1.2em;
-						min-width: 6.8em; /* Change button width here (Navigation bar) */
+						min-width: 5.8em; /* Change button width here (Navigation bar) */
+						max-width: 6.5em;
+
+					}
+
+					iframe {
+						min-width: 480px;
+						min-height: 270px;
+						max-height: 400px;
+				
+					}	
+
+				}
+
+
+				@media screen and (max-width: 560px) {
+
+					.header nav ul li a{
+						font-size: 0.9em;
+						min-width: 5.4em; /* Change mobile button width here (Navigation bar) */
+						max-width: 5.8em;
+					}
+
+					.subheader nav ul li a{
+						font-size: 0.8em;
+						min-width: 6.2em; /* Change mobile button width here (Navigation bar) */
+						max-width: 6.9em;
+					}
+
+					iframe {
+						min-width: 340px;
+						min-height: 190px;
+						max-height: 190px;
+				
 					}
 		
 				}
-					.subheader nav ul li a:hover {
-						background-color: rgba(0, 0, 0, 0.25);
-                        
-					}
 
-					.subheader nav ul li a:active {
-						background-color: rgba(0, 0, 0, 0.75);
-					}
+
+			.subheader nav ul li a:hover {
+				background-color: rgba(0, 0, 0, 0.25);
+				
+			}
+
+			.subheader nav ul li a:active {
+				background-color: rgba(0, 0, 0, 0.75);
+			}
 
 		@media screen and (max-width: 980px) {
 
