--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2106,7 +2106,7 @@
 					}
 
 					.text {
-						font-size: 1.05em; /* Change Fontsize Mobile */
+						font-size: 1.05em; /* Change Fontsize Mobile test firefox: Strg + Umsch. + M */
 					}
 
 					.fonts {
